# numba-mlir

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.bib  CMakeLists.txt  LICENSE  README.md  apaws.yml  azure-pipelines.yml  bandit.yaml  llvm-sha.txt  run-bench.sh
dpcomp_gpu_runtime/: CMakeLists.txt
dpcomp_gpu_runtime/lib/: FilterStringParser.cpp  FilterStringParser.hpp  GpuRuntime.cpp  LevelZeroPrinting.hpp  LevelZeroWrapper.hpp
mlir/: CMakeLists.txt
mlir/docs/Passes/: InsertGpuAllocs.md
mlir/include/imex/: Utils.hpp
mlir/include/imex/Analysis/: AliasAnalysis.hpp  MemorySsa.hpp  MemorySsaAnalysis.hpp
mlir/include/imex/Compiler/: Compiler.hpp  PipelineRegistry.hpp
mlir/include/imex/Conversion/: CfgToScf.hpp  GpuRuntimeToLlvm.hpp  GpuToGpuRuntime.hpp  NtensorToLinalg.hpp  NtensorToMemref.hpp  UtilConversion.hpp  UtilToLlvm.hpp
mlir/include/imex/Conversion/SCFToAffine/: SCFToAffine.h
mlir/include/imex/Dialect/imex_util/: CMakeLists.txt  Dialect.hpp  ImexUtilOps.td  Utils.hpp
mlir/include/imex/Dialect/plier/: CMakeLists.txt  Dialect.hpp
mlir/include/imex/ExecutionEngine/: ExecutionEngine.hpp
mlir/include/imex/Transforms/: ArgLowering.hpp  CallLowering.hpp  CanonicalizeReductions.hpp  CastLowering.hpp  CastUtils.hpp  CommonOpts.hpp  CompositePass.hpp  ConstUtils.hpp  ExpandTuple.hpp  FuncUtils.hpp  IfRewrites.hpp  IndexTypePropagation.hpp  InlineUtils.hpp  LoopRewrites.hpp  LoopUtils.hpp  MakeSignless.hpp  MemoryRewrites.hpp  PipelineUtils.hpp  PromoteBoolMemref.hpp  PromoteToParallel.hpp  RewriteWrapper.hpp  ScalarOpsConversion.hpp  ShapeIntegerRangePropagation.hpp  TypeConversion.hpp  UpliftMath.hpp
mlir/include/numba/Analysis/: AliasAnalysis.hpp  MemorySsa.hpp  MemorySsaAnalysis.hpp
mlir/include/numba/Compiler/: Compiler.hpp
mlir/include/numba/Conversion/: GpuAttributes.hpp  GpuRuntimeToLlvm.hpp  GpuToGpuRuntime.hpp  MathExtToLibm.hpp  NtensorToLinalg.hpp  NtensorToMemref.hpp  UtilConversion.hpp  UtilToLlvm.hpp
mlir/include/numba/Dialect/imex_util/: Dialect.hpp  Utils.hpp
mlir/include/numba/Dialect/numba_util/: CMakeLists.txt  Dialect.hpp  NumbaUtilOps.td  Utils.hpp
mlir/include/numba/Dialect/plier/: Dialect.hpp  (+1 more)
mlir/include/numba/ExecutionEngine/: ExecutionEngine.hpp
mlir/include/numba/Transforms/: CallLowering.hpp  CanonicalizeReductions.hpp  CastLowering.hpp  CastUtils.hpp  CommonOpts.hpp  ConstUtils.hpp  CopyRemoval.hpp  FuncTransforms.hpp  FuncUtils.hpp  IfRewrites.hpp  InlineUtils.hpp  LoopRewrites.hpp  LoopUtils.hpp  MakeSignless.hpp  MemoryRewrites.hpp  PipelineUtils.hpp  PromoteToParallel.hpp  RewriteWrapper.hpp  SCFVectorize.hpp  ScalarOpsConversion.hpp  TypeConversion.hpp  UpliftMath.hpp
mlir/lib/: Utils.cpp
mlir/lib/Analysis/: AliasAnalysis.cpp  MemorySsa.cpp  MemorySsaAnalysis.cpp
mlir/lib/Compiler/: Compiler.cpp  PipelineRegistry.cpp
mlir/lib/Conversion/: CfgToScf.cpp  DecomposeMemrefs.cpp  GpuRuntimeToLlvm.cpp  GpuToGpuRuntime.cpp  MathExtToLibm.cpp  NtensorToLinalg.cpp  NtensorToMemref.cpp  UtilConversion.cpp  UtilToLlvm.cpp
mlir/lib/Conversion/SCFToAffine/: SCFToAffine.cpp
mlir/lib/Dialect/imex_util/: Dialect.cpp
mlir/lib/Dialect/numba_util/: Dialect.cpp
mlir/lib/Dialect/plier/: Dialect.cpp
mlir/lib/ExecutionEngine/: ExecutionEngine.cpp
mlir/lib/Transforms/: ArgLowering.cpp  CallLowering.cpp  CanonicalizeReductions.cpp  CastLowering.cpp  CastUtils.cpp  CommonOpts.cpp  CompositePass.cpp  ConstUtils.cpp  CopyRemoval.cpp  ExpandTuple.cpp  FuncTransforms.cpp  FuncUtils.cpp  IfRewrites.cpp  IndexTypePropagation.cpp  InlineUtils.cpp  LoopRewrites.cpp  LoopUtils.cpp  MakeSignless.cpp  MemoryRewrites.cpp  PipelineUtils.cpp  PromoteBoolMemref.cpp  PromoteToParallel.cpp  SCFVectorize.cpp  ScalarOpsConversion.cpp  ShapeIntegerRangePropagation.cpp  TypeConversion.cpp  UpliftMath.cpp
mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/test/Conversion/: cfg-to-scf.mlir
mlir/test/Conversion/GPUToSPIRV/: builtins.mlir
mlir/test/Conversion/SCFToAffine/: lower-affine-parallel.mlir  scf-affine-round-trip.mlir  uplift-affine-parallel.mlir
mlir/test/Dialect/gpu_runtime/: canonicalize.mlir
mlir/test/Dialect/imex_util/: canonicalize-change-layout.mlir  canonicalize.mlir  ops.mlir
mlir/test/Dialect/ntensor/: canonicalize.mlir  copy-removal.mlir  ntensor-alias-analysis.mlir  ntensor-to-linalg.mlir  ntensor-to-memref.mlir  ops.mlir  propagate-env.mlir  resolve-array-ops.mlir
mlir/test/Dialect/numba_util/: canonicalize-change-layout.mlir  canonicalize.mlir
mlir/test/L0_RUNNER/: OpTest.ExplicitPadding.mlir  addf.mlir  linalg_addf.mlir  linalg_gemmf.mlir  linalg_gemvf.mlir  linalg_test_f32.mlir  linalg_test_f64.mlir  lit.local.cfg
mlir/test/Transforms/: canonicalize-reductions.mlir  common-opts.mlir  copy-removal.mlir  expand-tuple.mlir  gpu-to-gpux.mlir  gpux-sort-loops.mlir  gpux-tile-parallel.mlir  insert-global-reduce.mlir  make-barriers-uniform.mlir  make-signless.mlir  memory-opts.mlir  promote-to-parallel.mlir  remove-unused-args.mlir  serialize-spirv.mlir  set-spirv-abi-attr.mlir  set-spirv-capability.mlir  shape-int-range-opts.mlir
mlir/test/Transforms/InsertGpuAllocs/: add-gpu-alloc.mlir  call-op.mlir  dynamic-dims.mlir  memref-alloc-to-gpu-alloc.mlir  memref-get-global.mlir
mlir/tools/: CMakeLists.txt
mlir/tools/imex-opt/: CMakeLists.txt  Main.cpp  Passes.cpp
mlir/tools/level_zero_runner/: CMakeLists.txt  LevelZeroRunner.cpp
mlir/tools/numba-mlir-opt/: CMakeLists.txt  Main.cpp  Passes.cpp
numba_mlir/numba_mlir/math_runtime/: CMakeLists.txt
numba_mlir/numba_mlir/math_runtime/lib/: Common.cpp  Common.hpp  NumpyLinalg.cpp
numba_mlir/numba_mlir/math_runtime/sycl/: CMakeLists.txt
numba_mlir/numba_mlir/python_runtime/: CMakeLists.txt
numba_mlir/numba_mlir/python_runtime/lib/: Boxing.cpp  PythonRt.cpp  PythonRt.hpp
numba_mlir_gpu_runtime_l0/: CMakeLists.txt
numba_mlir_gpu_runtime_l0/lib/: FilterStringParser.cpp  GpuRuntime.cpp
numba_mlir_gpu_runtime_sycl/: CMakeLists.txt
numba_mlir_gpu_runtime_sycl/lib/: GpuModule.cpp  GpuModule.hpp  GpuRuntime.cpp  Utils.hpp
(+697 files in other folders)
